@@ -1,3 +1,9 @@
+2003-03-12  Yuji Abe <cbo46560@pop12.odn.ne.jp>
+
+	* [w3m-dev 03814] fix autoconf
+	* acinclude.m4: quote variables
+	* Bonus/oldconfigure.sh: configure using old config.param
+
 2003-03-12  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
 
 	* [w3m-dev 03812] fix autoconf
@@ -7472,4 +7478,4 @@ a	* [w3m-dev 03276] compile error on EWS4800
 	* release-0-2-1
 	* import w3m-0.2.1
 
-$Id: ChangeLog,v 1.786 2003/03/11 16:35:49 ukai Exp $
+$Id: ChangeLog,v 1.787 2003/03/11 16:52:09 ukai Exp $
